--- a/admin_interface.css
+++ b/admin_interface.css
@@ -110,10 +110,17 @@ nav div:hover i, nav div:hover button {
   display: flex;
   flex-direction: row;
   padding-left: 5px;
-  transition: all 0.01s ease-in-out;
+  transition: all 0.005s ease-in-out;
 }
 
 .sidebar-options:hover {  
+  background-color: rgb(6, 111, 216);
+  color: white;
+  border-radius: 5px;
+  border-left: 10px solid greenyellow;
+}
+
+.active-sidebar-options { 
   background-color: rgb(6, 111, 216);
   color: white;
   border-radius: 5px;
@@ -173,7 +180,7 @@ nav div:hover i, nav div:hover button {
   margin-top: 30px;    
 }
 
-#container-tabs {  
+.container-tabs {  
   display: flex;
   flex-direction: row;    
   font-weight: bold;  
@@ -182,7 +189,7 @@ nav div:hover i, nav div:hover button {
   border-top-left-radius: 10px;  
 }
 
-#container-tabs p {  
+.container-tabs p {  
   margin: 0;
   padding: 20px;
   padding-top: 10px;
@@ -193,11 +200,16 @@ nav div:hover i, nav div:hover button {
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
   border-bottom: 0;
-  color: black;  
-  transition: all 0.1s ease-in-out;
+  color: black;    
+  transition: all 0.005s ease-in-out;
 }
 
-#container-tabs p:hover {
+.container-tabs p:hover {
+  background-color: black;
+  color: white;  
+}
+
+#active-container-tabs {
   background-color: black;
   color: white;  
 }
@@ -215,7 +227,7 @@ nav div:hover i, nav div:hover button {
   display: flex;
   flex-direction: row;   
   overflow: auto;   
-  max-height: 70vh;
+  max-height: 65vh;
 }
 
 .query-columns {
@@ -247,8 +259,15 @@ nav div:hover i, nav div:hover button {
   font-weight: 600;      
 }
 
+.query-body p {
+	font-size: 17px;
+}
+
 .query-body .fa-envelope {
-  font-size: 25px;
+  font-size: 26px;    
+  padding: 10px;
+  padding-right: 20px;
+  padding-left: 20px;
   color: green;
   cursor: pointer;
 }
@@ -273,9 +292,22 @@ nav div:hover i, nav div:hover button {
 
 .fa-square-xmark {  
   position: sticky;
-  top: 0;
+  top: 0;  
   float: right;
   color: red;
   font-size: 30px;
   cursor: pointer;
+}
+
+#query-count-container {
+  display: flex; 
+  flex-direction: row; 
+  justify-content: right; 
+  flex-grow: 1;
+}
+
+#query-count {
+  margin: 0; 
+  padding: 10px; 
+  padding-right: 20px;
 }
