--- a/Aarogya_Healthcare(NEW)/Aarogya_Healthcare/src/main/webapp/admin-interface/admin_interface.css
+++ b/Aarogya_Healthcare(NEW)/Aarogya_Healthcare/src/main/webapp/admin-interface/admin_interface.css
@@ -242,7 +242,7 @@ nav div:hover i, nav div:hover button {
   padding: 10px;  
 }
 
-.fa-user-doctor, .fa-user, .fa-user-tie {
+.fa-user-doctor, .fa-user, .fa-user-tie, .fa-calendar-check {
   padding: 12px;  
 }
 
