--- a/Aarogya_Healthcare(NEW)/Aarogya_Healthcare/src/main/webapp/doctor-interface/doctor_interface.css
+++ b/Aarogya_Healthcare(NEW)/Aarogya_Healthcare/src/main/webapp/doctor-interface/doctor_interface.css
@@ -53,7 +53,7 @@
   padding: 12px;
 }
 
-.fa-clock-rotate-left {
+.fa-clock-rotate-left, .fa-pen-to-square {
   padding: 11px;
 }
 
@@ -101,3 +101,6 @@
   color: #2c4964;
 }
 
+#search-filter-refill {
+  display: none;
+}
